revisando o código do componente megasena

--- a/src/components/megasena/Megasena.css
+++ b/src/components/megasena/Megasena.css
@@ -1,8 +1,8 @@
-.Mega input{
+.Megasena input{
     font-size: 1.4rem;
     width: 50px;
 }
 
-.Mega label{
+.Megasena label{
     margin-right: 10px;
 }
